k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resttemplateserver
  labels:
    app: resttemplateserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resttemplateserver
  template:
    metadata:
      labels:
        app: resttemplateserver
      annotations:
        sidecar.istio.io/inject: "true"  
    spec:
      containers:
        - name: resttemplateserver
          image: 210.90.24.172:8080/restproject/leeyoungkon/resttemplateserver:0f8e39dda3fe476c7d5173d578577f72d305820d
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: resttemplateserver
spec:
  type: NodePort
  selector:
    app: resttemplateserver
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30102
