openfeignclient-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: openfeignclient-vs
spec:
  hosts:
    - "*"
  gateways:
    - resttemplate-gateway
  http:
    - match:
        - uri:
            prefix: /books
      timeout: 3s
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: gateway-error,connect-failure,refused-stream
      route:
        - destination:
            host: openfeignclient.default.svc.cluster.local
            port:
              number: 8080
